Generic JSON processing sample added